nsMixedContentBlocker::AsyncOnChannelRedirect should return an error if there is no loadinfo
Categories
(Core :: DOM: Security, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox67 | --- | fixed |
People
(Reporter: tanvi, Assigned: ckerschb)
References
(Blocks 2 open bugs)
Details
(Whiteboard: [domsecurity-active])
Attachments
(1 file, 1 obsolete file)
| Assignee | ||
Updated•10 years ago
|
| Assignee | ||
Updated•10 years ago
|
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Comment 1•7 years ago
|
||
| Assignee | ||
Comment 2•7 years ago
|
||
| Assignee | ||
Comment 3•7 years ago
|
||
Still having trouble with my lando account - can someone check that bug in for me please - thanks!
Comment 4•7 years ago
|
||
I've received the following error when trying to land this:
"ERROR **************************** remote: Rev 5050856d851c needs "Bug N" or "No bug" in the commit message. remote: Christoph Kerschbaumer <ckerschb@christophkerschbaumer.com> remote: Summary: r=jkt remote: Bug 1077201: No need to return if there is no loadinfo in the mixed content blocker - we have loadinfo everywhere. r=jkt remote: remote: Differential Revision: https://phabricator.services.mozilla.com/D19658 remote: ************************************************************* remote: remote: remote: transaction abort! remote: rollback completed remote: pretxnchangegroup.c_commitmessage hook failed abort: push failed on remote"
;ckerschb Can you please take a look?
| Assignee | ||
Comment 5•7 years ago
|
||
| Assignee | ||
Comment 6•7 years ago
|
||
I don't get phabricator review requests. So I downloaded the raw diff from phab (since I am on a different machine). Updated the message (using hg amend -m) and did an arc diff. Now it creates a new changeset with a new review request. Shouldn't it just update the old one?
What am I doing wrong? Sorry for the additional review - can you rubber stamp again so I can land this one?
Updated•7 years ago
|
| Assignee | ||
Comment 7•7 years ago
|
||
(In reply to Christoph Kerschbaumer [:ckerschb] from comment #6)
What am I doing wrong? Sorry for the additional review - can you rubber stamp again so I can land this one?
arc diff --update D19658
I still need to get used to phabricator - I think it works now.
Setting the checkin-keyword again
Comment 8•7 years ago
|
||
(In reply to Christoph Kerschbaumer [:ckerschb] from comment #7)
The patch failed to land again for the same issue in https://bugzilla.mozilla.org/show_bug.cgi?id=1077201#c4 .
Could you please remove "summary" from the commit message and then set it back to checkin-needed?
Thank you.
Updated•7 years ago
|
| Assignee | ||
Comment 10•7 years ago
|
||
(In reply to Natalia Csoregi [:nataliaCs] from comment #8)
The patch failed to land again for the same issue in https://bugzilla.mozilla.org/show_bug.cgi?id=1077201#c4 .
Could you please remove "summary" from the commit message and then set it back to checkin-needed?
Thank you.
Ah, still have to get used to phab - pushed it myself now - thanks.
Comment 11•7 years ago
|
||
| bugherder | ||
Description
•