Bug 1077201: No need to return if there is no loadinfo in the mixed content blocker - we have loadinfo everywhere. r=jkt